infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: tickets.local
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth
              servicePort: 3000
